name:                HTrees
version:             0.1.0.0
synopsis:            An example implementation of regression trees.
license:             MIT
license-file:        LICENSE
author:              Mark Reid
maintainer:          mark.reid@gmail.com
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HTrees
  build-depends:       base >=4.6 && <4.9
                     , bytestring
                     , containers
                     , transformers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable run
  hs-source-dirs:		src
  default-language:		Haskell2010
  main-is:				run.hs
  
  build-depends: HTrees
               , base
               , containers
               , csv-conduit
               , transformers
               , vector
  other-modules: HTrees
